@@ -20,9 +20,9 @@ public class NodeUpdateRequest implements FieldContainer {
 	@JsonPropertyDescription("Dynamic map with fields of the node content.")
 	private FieldMap fields = new FieldMapImpl();
 
-	@JsonProperty(required = true)
-	@JsonPropertyDescription("Version number which must be provided in order to handle and detect concurrent changes to the node content.")
-	private String version;
+	@JsonProperty(required = false)
+	@JsonPropertyDescription("Version number which can be provided in order to handle and detect concurrent changes to the node content.")
+	private String version = "draft";
 
 	@JsonProperty(required = false)
 	@JsonPropertyDescription("List of tags that should be used to tag the node.")
